NetBSD Problem Report #37976

From Wolfgang.Stukenbrock@nagler-company.com  Thu Feb  7 15:48:16 2008
Return-Path: <Wolfgang.Stukenbrock@nagler-company.com>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id A9D8863B853
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  7 Feb 2008 15:48:16 +0000 (UTC)
Message-Id: <200802071548.m17FmFo7003008@test-s0.nagler-company.com>
Date: Thu, 7 Feb 2008 16:48:15 +0100 (CET)
From: Wolfgang Stukenbrock <Wolfgang.Stukenbrock@nagler-company.com>
Reply-To: Wolfgang.Stukenbrock@nagler-company.com
To: gnats-bugs@gnats.NetBSD.org
Subject: netbsd 4.0 failed to catch multicast packets on some wm interface
X-Send-Pr-Version: 3.95

>Number:         37976
>Category:       kern
>Synopsis:       netbsd 4.0 failed to catch multicast packets on some wm interface
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    msaitoh
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Feb 07 15:50:00 +0000 2008
>Closed-Date:    Sun Apr 26 04:40:14 +0000 2009
>Last-Modified:  Sun Apr 26 04:40:14 +0000 2009
>Originator:     Wolfgang Stukenbrock
>Release:        NetBSD 4.0
>Organization:
Dr. Nagler & Company GmbH

>Environment:


System: NetBSD s010 4.0 NetBSD 4.0 (GENERIC.MP) #0: Sat Dec 15 22:34:19 PST 2007  builds@wb28:/home/builds/ab/netbsd-4-0-RELEASE/amd64/200712160005Z-obj/home/builds/ab/netbsd-4-0-RELEASE/src/sys/arch/amd64/compile/GENERIC.MP amd64
Architecture: x86_64
Machine: amd64
>Description:
	The netbsd 4.0 kernel does not recieve multicast packets on some wm interfaces.
	E.g. the routing deamon routed does not see any multicast packets send to
	RIP2-ROUTERS.MCAST.NET.route by other servers.
	If you bring the interface into promisios mode (e.g. with tcpdump -i wm1), then the
	multicast packets are seen by routed.

	The problem does not occure on all wm interfaces.
	At least the following interface on the Intel S3210SHLC server board is affected:

	wm1 at pci0 dev 25 function 0: 82801I (AMT) LAN Controller, rev. 2
	wm1: interrupting at ioapic0 pin 20 (irq 11)
	wm1: PCI-Express bus
	wm1: FLASH
	wm1: Ethernet address 00:15:17:26:21:12
	igphy1 at wm1 phy 1: i82566 10/100/1000 media interface, rev. 0
	igphy1: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto

	The wm interfaces in the PCIe slots works fine and the second on board interface too.
	Also the sip0 has no problem.

	(on board NIC1 - PCI 32-bit bus)
	wm3 at pci4 dev 2 function 0: Intel i82541GI 1000BASE-T Ethernet, rev. 5
	wm3: interrupting at ioapic0 pin 18 (irq 9)
	wm3: 32-bit 33MHz PCI bus
	wm3: 65536 word (16 address bits) SPI EEPROM
	wm3: Ethernet address 00:15:17:26:21:10
	igphy3 at wm3 phy 1: Intel IGP01E1000 Gigabit PHY, rev. 0
	igphy3: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
	sip0 at pci4 dev 1 function 0: NatSemi DP83815 10/100 Ethernet, rev 00
	sip0: interrupting at ioapic0 pin 17 (irq 10)
	sip0: Ethernet address 00:02:e3:1d:8e:77
	nsphyter0 at sip0 phy 0: DP83815 10/100 media interface, rev. 1
	nsphyter0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto


        (PCIe cards)
	wm0 at pci1 dev 0 function 0: Intel i82572EI 1000baseT Ethernet, rev. 6
	wm0: interrupting at ioapic0 pin 16 (irq 11)
	wm0: PCI-Express bus
	wm0: 65536 word (16 address bits) SPI EEPROM
	wm0: Ethernet address 00:1b:21:05:03:e8
	igphy0 at wm0 phy 1: Intel IGP01E1000 Gigabit PHY, rev. 0
	igphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto
	wm2 at pci2 dev 0 function 0: Intel i82572EI 1000baseT Ethernet, rev. 6
	wm2: interrupting at ioapic0 pin 16 (irq 11)
	wm2: PCI-Express bus
	wm2: 65536 word (16 address bits) SPI EEPROM
	wm2: Ethernet address 00:1b:21:05:01:47
	igphy2 at wm2 phy 1: Intel IGP01E1000 Gigabit PHY, rev. 0
	igphy2: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, 1000baseT, 1000baseT-FDX, auto

	remark: the NIC1 (wm1 above) can be used as system-control-interface if the onboard
	        BMC is instructed to do so. In our config, the BMC is setup in the BIOS to
		do not to access the NIC.

	Here are the top lines of the boot messages for this system.
	I've used the netbsd-GENERIC.MP.gz kernel from
	ftp.netbsd.org:/pub/NetBSD/NetBSD-4.0/amd64/binary/kernel, so that local config changes
	cannot produce this problem.

	Copyright (c) 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005,
	    2006, 2007
	    The NetBSD Foundation, Inc.  All rights reserved.
	Copyright (c) 1982, 1986, 1989, 1991, 1993
	    The Regents of the University of California.  All rights reserved.

	  NetBSD 4.0 (GENERIC.MP) #0: Sat Dec 15 22:34:19 PST 2007
		    builds@wb28:/home/builds/ab/netbsd-4-0-RELEASE/amd64/200712160005Z-obj/home/builds/ab/netbsd-4-0-RELEASE/src/sys/arch/amd64/compile/GENERIC.MP
	  total memory = 4093 MB
	  avail memory = 3937 MB
	  timecounter: Timecounters tick every 10.000 msec
	  RTC BIOS diagnostic error 4<invalid_time>
	  timecounter: Timecounter "i8254" frequency 1193182 Hz quality 100
	  mainbus0 (root)
	  cpu0 at mainbus0: apid 0 (boot processor)
	  cpu0: Intel(R) Xeon(R) CPU            3075  @ 2.66GHz, 2660.13 MHz
	  cpu0: features: bffbfbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR>
	  cpu0: features: bffbfbff<PGE,MCA,CMOV,PAT,PSE36,CFLUSH,B20,DS,ACPI,MMX>
	  cpu0: features: bffbfbff<FXSR,SSE,SSE2,SS,HTT,TM,SBF>
	  cpu0: features2: e3fd<SSE3,MONITOR,DS-CPL,VMX,EST,TM2,xTPR>
	  cpu0: features3: bffbfbff<SYSCALL/SYSRET,XD,EM64T>
	  cpu0: L2 cache 4 MB 64B/line 16-way
	  cpu0: Enhanced SpeedStep disabled by BIOS
	  cpu0: calibrating local timer
	  cpu0: apic clock running at 332 MHz
	  cpu0: 64 page colors
	  cpu1 at mainbus0: apid 1 (application processor)
	  cpu1: starting
	  cpu1: Intel(R) Xeon(R) CPU            3075  @ 2.66GHz, 2660.00 MHz
	  cpu1: features: bffbfbff<FPU,VME,DE,PSE,TSC,MSR,PAE,MCE,CX8,APIC,SEP,MTRR>
	  cpu1: features: bffbfbff<PGE,MCA,CMOV,PAT,PSE36,CFLUSH,B20,DS,ACPI,MMX>
	  cpu1: features: bffbfbff<FXSR,SSE,SSE2,SS,HTT,TM,SBF>
	  cpu1: features2: e3fd<SSE3,MONITOR,DS-CPL,VMX,EST,TM2,xTPR>
	  cpu1: features3: bffbfbff<SYSCALL/SYSRET,XD,EM64T>
	  cpu1: L2 cache 4 MB 64B/line 16-way
	  cpu1: Enhanced SpeedStep disabled by BIOS
	  ioapic0 at mainbus0 apid 5 (I/O APIC)
	  ioapic0: pa 0xfec00000, version 20, 24 pins
	  ioapic0: misconfigured as apic 0
	  ioapic0: remapped to apic 5
	  acpi0 at mainbus0: Advanced Configuration and Power Interface
	  acpi0: using Intel ACPI CA subsystem version 20060217
	  acpi0: X/RSDT: OemId <INTEL ,S3200SHC,00000000>, AslId <INTL,01000013>
	  acpi0: SCI interrupting at int 9
	  acpi0: fixed-feature power button present
	  timecounter: Timecounter "ACPI-Fast" frequency 3579545 Hz quality 1000
	  ACPI-Fast 24-bit timer
	  mpacpi: could not get bus number, assuming bus 0
>How-To-Repeat:
	Use an Intel S3210SHLC board an try to use NIC2 on it to recieve multicast packets.
>Fix:
	Currently not known from my side.
	I've not enougth nowledge about the wm interface hard-/software or documentation to do
	further analyses. Sorry.

>Release-Note:

>Audit-Trail:
From: Wolfgang Stukenbrock <Wolfgang.Stukenbrock@nagler-company.com>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/37976: netbsd 4.0 failed to catch multicast packets on some wm interface
Date: Thu, 21 Feb 2008 10:38:31 +0100

 Hi again,

 I've located some additional problems in NetBSD 4.0 with this interface.
 The media-selection does not work correctly.
 Autonegotiation will only succed some times ..
 Setting the mediatype vie "ifconfig xxx media yyyy" will not set the 
 requested media type in all cases.
 UTP seems to work correctly, e.g. 100baseTX-FDX will lead to 100 Mbit 
 HDX links.
 Sometimes setting the media type will end up with an error. After reboot 
 the same mediatype can be set ...

 W. Stukenbrock

 gnats-admin@NetBSD.org wrote:

 > Thank you very much for your problem report.
 > It has the internal identification `kern/37976'.
 > The individual assigned to look at your
 > report is: kern-bug-people. 
 > 
 > 
 >>Category:       kern
 >>Responsible:    kern-bug-people
 >>Synopsis:       netbsd 4.0 failed to catch multicast packets on some wm interface
 >>Arrival-Date:   Thu Feb 07 15:50:00 +0000 2008
 >>
 > 


Responsible-Changed-From-To: kern-bug-people->msaitoh
Responsible-Changed-By: msaitoh@NetBSD.org
Responsible-Changed-When: Tue, 17 Mar 2009 15:36:57 +0000
Responsible-Changed-Why:
fixed by me with if_wm.c rev. 1.166


State-Changed-From-To: open->feedback
State-Changed-By: msaitoh@NetBSD.org
State-Changed-When: Tue, 17 Mar 2009 15:36:57 +0000
State-Changed-Why:
I've fixed with if_wm.c rev. 1.166. I believe.


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37976 CVS commit: [netbsd-4] src/sys/dev/pci
Date: Tue, 24 Mar 2009 21:50:04 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Tue Mar 24 21:50:03 UTC 2009

 Modified Files:
 	src/sys/dev/pci [netbsd-4]: if_wm.c

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #1291):
 	sys/dev/pci/if_wm.c: revision 1.166
 Fix the multicast hash bug on ICH9's wm.
 Now we can catch ff02::9 on ICH9's wm. Fixes PR#37976


 To generate a diff of this commit:
 cvs rdiff -u -r1.131.2.7 -r1.131.2.8 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/37976 CVS commit: [netbsd-3] src/sys/dev/pci
Date: Thu, 26 Mar 2009 20:27:18 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Thu Mar 26 20:27:18 UTC 2009

 Modified Files:
 	src/sys/dev/pci [netbsd-3]: if_wm.c

 Log Message:
 Pull up following revision(s) (requested by msaitoh in ticket #2002):
 	sys/dev/pci/if_wm.c: revision 1.166
 Fix the multicast hash bug on ICH9's wm.
 Now we can catch ff02::9 on ICH9's wm. Fixes PR#37976.


 To generate a diff of this commit:
 cvs rdiff -u -r1.100.2.12 -r1.100.2.13 src/sys/dev/pci/if_wm.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: David Holland <dholland-bugs@netbsd.org>
To: msaitoh@NetBSD.org, gnats-bugs@netbsd.org
Cc: 
Subject: Re: kern/37976: CVS commit: [netbsd-3] src/sys/dev/pci
Date: Thu, 26 Mar 2009 20:53:02 +0000

 On Thu, Mar 26, 2009 at 08:30:04PM +0000, Manuel Bouyer wrote:
  >  Module Name:	src
  >  Committed By:	bouyer
  >  Date:		Thu Mar 26 20:27:18 UTC 2009
  >  
  >  Modified Files:
  >  	src/sys/dev/pci [netbsd-3]: if_wm.c
  >  
  >  Log Message:
  >  Pull up following revision(s) (requested by msaitoh in ticket #2002):
  >  	sys/dev/pci/if_wm.c: revision 1.166
  >  Fix the multicast hash bug on ICH9's wm.
  >  Now we can catch ff02::9 on ICH9's wm. Fixes PR#37976.

 Is there a pullup to -5 for this? It doesn't appear to have been
 applied and I don't see one in the queue...

 -- 
 David A. Holland
 dholland@netbsd.org

From: Soren Jacobsen <snj@pobox.com>
To: gnats-bugs@NetBSD.org
Cc: msaitoh@NetBSD.org, netbsd-bugs@netbsd.org,
 Wolfgang.Stukenbrock@nagler-company.com
Subject: Re: kern/37976: CVS commit: [netbsd-3] src/sys/dev/pci
Date: Thu, 26 Mar 2009 14:11:15 -0700

 On 03/26 20:55, David Holland wrote:
 > The following reply was made to PR kern/37976; it has been noted by GNATS.
 > 
 > From: David Holland <dholland-bugs@netbsd.org>
 > To: msaitoh@NetBSD.org, gnats-bugs@netbsd.org
 > Cc: 
 > Subject: Re: kern/37976: CVS commit: [netbsd-3] src/sys/dev/pci
 > Date: Thu, 26 Mar 2009 20:53:02 +0000
 > 
 >  On Thu, Mar 26, 2009 at 08:30:04PM +0000, Manuel Bouyer wrote:
 >   >  Module Name:	src
 >   >  Committed By:	bouyer
 >   >  Date:		Thu Mar 26 20:27:18 UTC 2009
 >   >  
 >   >  Modified Files:
 >   >  	src/sys/dev/pci [netbsd-3]: if_wm.c
 >   >  
 >   >  Log Message:
 >   >  Pull up following revision(s) (requested by msaitoh in ticket #2002):
 >   >  	sys/dev/pci/if_wm.c: revision 1.166
 >   >  Fix the multicast hash bug on ICH9's wm.
 >   >  Now we can catch ff02::9 on ICH9's wm. Fixes PR#37976.
 >  
 >  Is there a pullup to -5 for this? It doesn't appear to have been
 >  applied and I don't see one in the queue...

 Update your tree.  It was done in ticket 583.

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org, msaitoh@NetBSD.org
Cc: 
Subject: Re: kern/37976: CVS commit: [netbsd-3] src/sys/dev/pci
Date: Thu, 26 Mar 2009 21:15:39 +0000

 On Thu, Mar 26, 2009 at 02:11:15PM -0700, Soren Jacobsen wrote:
  > >  Is there a pullup to -5 for this? It doesn't appear to have been
  > >  applied and I don't see one in the queue...
  > 
  > Update your tree.  It was done in ticket 583.

 I was looking in CVS, and it's there now, but I swear it wasn't half
 an hour ago.

 I have from time to time suspected that cvs log doesn't always return
 log info for all branch revisions, and it definitely did have such
 trouble in 2.x days, but probably this time I was just blind.

 meh, sorry about the noise.

 -- 
 David A. Holland
 dholland@netbsd.org

From: Wolfgang Stukenbrock <Wolfgang.Stukenbrock@nagler-company.com>
To: gnats-bugs@NetBSD.org
Cc: msaitoh@NetBSD.org, kern-bug-people@NetBSD.org, netbsd-bugs@NetBSD.org,
        gnats-admin@NetBSD.org, Wolfgang.Stukenbrock@nagler-company.com
Subject: Re: kern/37976 (netbsd 4.0 failed to catch multicast packets on some wm interface)
Date: Mon, 20 Apr 2009 11:19:25 +0200

 Hi, sorry for the delay ...

 It looks good.
 Selecting the media type on the AMT-onboard interface works as expected 
 - I've got no problems anymore.
 I've seen some multicast packets on the other interface too - so that 
 should also work.
 I've rearranged the usage of the interfaces in the past to work around 
 the problem and the system is running in a productive erea. So I cannot 
 reconfigure everything on it for testing - sorry.


 I think the problem report can be closed now.

 Thank.

 W. Stukenbrock

 msaitoh@NetBSD.org wrote:

 >Synopsis: netbsd 4.0 failed to catch multicast packets on some wm interface
 >
 >Responsible-Changed-From-To: kern-bug-people->msaitoh
 >Responsible-Changed-By: msaitoh@NetBSD.org
 >Responsible-Changed-When: Tue, 17 Mar 2009 15:36:57 +0000
 >Responsible-Changed-Why:
 >fixed by me with if_wm.c rev. 1.166
 >
 >
 >State-Changed-From-To: open->feedback
 >State-Changed-By: msaitoh@NetBSD.org
 >State-Changed-When: Tue, 17 Mar 2009 15:36:57 +0000
 >State-Changed-Why:
 >I've fixed with if_wm.c rev. 1.166. I believe.
 >
 >
 >


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 26 Apr 2009 04:40:14 +0000
State-Changed-Why:
Submitter reports fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.